kubernetes/apps/emby/emby-extras/app/ingress-emby.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik_redirect-https@kubernetescrd
  name: emby
  namespace: emby
spec:
  ingressClassName: traefik
  rules:
  - host: emby.${BASE_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: emby
            port:
              number: 8096
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - emby.${BASE_DOMAIN}
    secretName: emby-tls
